# dothttp

./: .gitignore  .gitmessage  Cargo.toml  README.md  flake.nix  rustfmt.toml
.github/workflows/: check.yml  nix.yml  release.yml  test.yml
docs/: dothttp-format.md  postman-export.md
docs/requests/: http-client.env.json  multi.env.json  response_handler.http  simple.http  simple_with_variables.http
src/: environment.rs  executor.rs  lib.rs  main.rs  source.rs
src/export/: collection_post_script.js  collection_pre_script.js  mod.rs  postman.rs
src/http/: mod.rs  reqwest.rs  tests.rs
src/http_client/: reqwest.rs  tests.rs
src/output/: ci.rs  mod.rs  print.rs  tests.rs
src/parser/: mod.rs  parser.pest  tests.rs
src/script_engine/: boa.rs  mod.rs  report.rs  tests.rs  v8.rs
src/script_engine/boa/: client.rs  random.rs  request.rs  variables.rs
tests/: multi.rs  simple.rs
tests/common/: mod.rs
tests/requests/: multi.http  simple-get.http  simple-post.http
