[package]
authors = ["Brian Payne <bwpayne@gmail.com>", "Alisa Gorelova <nanopro1g@gmail.com>"]
edition = "2021"
name = "dothttp"
version = "0.7.0"
readme = "README.md"
description = "dothttp is a text-based scriptable HTTP client. It is a fork for dot-http. It is a simple language that resembles the actual HTTP protocol but with additional features to make it practical for someone who builds and tests APIs."
repository = "https://github.com/alisa101rs/dothttp"
keywords = ["http", "scriptable", "java-script", "API"]
categories = ["command-line-utilities", "development-tools::testing", "web-programming::http-client"]
license = "Apache-2.0"

[[bin]]
name = "dothttp"
path = "src/main.rs"

[dependencies]
boa_engine = { version = "0.17.3" }
boa_runtime = "0.17.3"
reqwest = { version = "^0.11.22", features = ["rustls-tls"], default-features = false }
pest = "2.7.5"
pest_derive = "2.7.5"
clap = { version = "4.4.6", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
color-eyre = "0.6.2"
uuid = { version = "1.4.1", features = ["v4"] }
rand = "0.8.5"
chrono = "0.4.31"
tokio = { version = "1", features = ["net", "macros"] }
http = "1.0.0"

[dev-dependencies]
axum = "0.7.4"
tempfile = "3.8.0"

